app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
spec:
  selector:
    app: express-app
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 8080
