ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeport-srv
                port:
                  number: 8080
          - path: /express
            pathType: Prefix
            backend:
              service:
                name: express-srv
                port:
                  number: 8080
